force-app/main/default/objects/Invoice__c/fields/Invoice_closed_date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_closed_date__c</fullName>
    <label>Invoice closed date</label>
    <type>Date</type>
</CustomField>