force-app/main/default/objects/Invoice__c/fields/Invoice_status__c.field-meta.xml
<CustomField>
    <fullName>Invoice_status__c</fullName>
    <label>Invoice status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OPEN</fullName>
            </value>
            <value>
                <fullName>CLOSED</fullName>
            </value>
            <value>
                <fullName>BARGIN</fullName>
            </value>
            <value>
                <fullName>FINALIZED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>