force-app/main/default/objects/Invoice__c/fields/Min_Value_Item__c.field-meta.xml
<CustomField>
    <fullName>Min_Value_Item__c</fullName>
    <label>Min Value Item</label>
    <summarizedField>Sell_items__c.Sell_Items_Price__c</summarizedField>
    <summaryForeignKey>Sell_items__c.Invoice__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>