force-app/main/default/objects/Invoice__c/fields/Total_invoice_price__c.field-meta.xml
<CustomField>
    <fullName>Total_invoice_price__c</fullName>
    <label>Total invoice price</label>
    <summarizedField>Sell_items__c.Total_Price__c</summarizedField>
    <summaryForeignKey>Sell_items__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>