force-app/main/default/objects/Invoice__c/fields/Total_Items__c.field-meta.xml
<CustomField>
    <fullName>Total_Items__c</fullName>
    <label>Total Items</label>
    <summaryForeignKey>Sell_items__c.Invoice__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>