force-app/main/default/objects/Invoice__c/validationRules/Closed_date_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_date_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Invoice_status__c , &quot;CLOSED&quot;) , ISNULL( Invoice_closed_date__c ))</errorConditionFormula>
    <errorDisplayField>Invoice_closed_date__c</errorDisplayField>
    <errorMessage>Enter Close Date</errorMessage>
</ValidationRule>